# cuentas-publicas

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  README.md
.github/workflows/: deploy.yml  update-data.yml
scraper/: README.md  pyproject.toml
scraper/src/scraper/: __init__.py  __main__.py  db.py  main.py
scraper/src/scraper/scrapers/: aeat.py  ccaa.py  deuda.py  eurostat_aapp.py  igae.py  igae_cofog.py  iva_tipos.py  pensiones.py  seguridad_social.py  sepg.py  sepg_politicas.py  transferencias_ccaa.py
scraper/src/scraper/transform/: aeat.py  igae.py  sepg.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/geo/: ccaa.json
web/src/: App.tsx  index.css
web/src/components/charts/: BarChart.tsx  ChoroplethMap.tsx  LineChart.tsx  TreemapChart.tsx
web/src/components/filters/: ViewModeToggle.tsx  YearSelector.tsx
web/src/components/layout/: AppShell.tsx  PageHeader.tsx  TopBar.tsx
web/src/components/ui/: ContextBox.tsx  ErrorBoundary.tsx  InfoTooltip.tsx  InsightsPanel.tsx  KpiCard.tsx  LoadingSkeleton.tsx
web/src/db/: client.ts
web/src/db/queries/: aapp.ts  aeat.ts  ccaa.ts  cofog.ts  deuda.ts  gastos.ts  gastos_politica.ts  ingresos.ts  iva_tipos.ts  pensiones.ts
web/src/pages/AAPP/: Deuda.tsx  Gastos.tsx  Ingresos.tsx  index.tsx
web/src/pages/CCAA/: Detalle.tsx  Deuda.tsx  Gastos.tsx  Ingresos.tsx  index.tsx
web/src/pages/Comparativa/: index.tsx
web/src/pages/Estado/: Deuda.tsx  index.tsx
web/src/pages/Gastos/: Funcion.tsx  (+2 more)
web/src/store/: filters.ts
web/src/utils/: colors.ts  format.ts  insights.ts
(+15 files in other folders)
